--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "php-console/laravel-service-provider": "~5.0",
-        "php-console/php-console": "^3.1"
+        "php-console/php-console": "^3.1",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
