--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.7",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.2",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "php-console/laravel-service-provider": "~5.0",
-        "php-console/php-console": "^3.1",
-        "guzzlehttp/guzzle": "^6.2"
+        "php-console/php-console": "^3.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
